splash page is done, employee portall, payroll portal, now need to finish landing page

--- a/Client/style.css
+++ b/Client/style.css
@@ -45,3 +45,25 @@
 
 .footerBg{
 background-color: #f4f1de;}
+
+/* css for splash page */
+
+.splashNav {
+ background-color:white;
+}
+
+.splashMain {
+  background-color: #f4f1de;
+}
+
+.splashBg {
+  background-color: #495057;
+}
+
+#splashSignin {
+  margin: 1px;
+}
+
+.footerLogo {
+  width: 100%;
+}
